Chore: 이슈 생성 시 브랜치 타입 선택 할 수 있도록 변경

--- a/.github/ISSUE_TEMPLATE/issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/issue-form.yml
@@ -12,6 +12,19 @@ body:
     validations:
       required: true
 
+  - type: dropdown
+    id: branchType
+    attributes:
+      label: '📂 브랜치 타입'
+      description: '기능 타입을 선택하세요'
+      options:
+        - feat
+        - hotfix
+        - refactor
+        - test
+    validations:
+      required: true
+
   - type: input
     id: branch
     attributes:
