--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -43,12 +43,14 @@ jobs:
         uses: atlassian/gajira-create@v3
         with:
           project: GUC
-          issuetype: Story
+          issuetype: Sub-task
           summary: '${{ github.event.issue.title }}'
           description: '${{ steps.md2jira.outputs.output-text }}'
           fields: |
             {
-              "customfield_10014": "${{ steps.issue-parser.outputs.issueparser_parentKey }}"
+              "parent": {
+                "key": "${{ steps.issue-parser.outputs.issueparser_parentKey }}"
+              }
             }
 
       - name: 브랜치 생성 및 푸시
@@ -56,7 +58,8 @@ jobs:
           ISSUE_NUMBER="${{ steps.create.outputs.issue }}"
           BRANCH_TYPE="${{ steps.issue-parser.outputs.issueparser_branchType }}"
           BRANCH_NAME_INPUT="${{ steps.issue-parser.outputs.issueparser_branch }}"
-          BRANCH_NAME="${BRANCH_TYPE}/${ISSUE_NUMBER}-${BRANCH_NAME_INPUT}"
+          SANITIZED_INPUT=$(echo "${BRANCH_NAME_INPUT}" | tr '[:upper:]' '[:lower:]' | sed 's/ /-/g' | sed 's/[^a-z0-9\\-]//g')
+          BRANCH_NAME="${BRANCH_TYPE}/${ISSUE_NUMBER}-${SANITIZED_INPUT}"
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git checkout -b "${BRANCH_NAME}"
