Chore: Jira 티켓 타입 수정
- Sub-task -> Story 타입으로 생성 되도록 변경

--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -43,7 +43,7 @@ jobs:
         uses: atlassian/gajira-create@v3
         with:
           project: GUC
-          issuetype: Sub-task
+          issuetype: Story
           summary: '${{ github.event.issue.title }}'
           description: '${{ steps.md2jira.outputs.output-text }}'
           fields: |
