Docs: 이슈 생성 시 브랜치 타입에 옵션 추가
- fix 옵션 추가

--- a/.github/ISSUE_TEMPLATE/issue-form.yml
+++ b/.github/ISSUE_TEMPLATE/issue-form.yml
@@ -19,6 +19,7 @@ body:
       description: '기능 타입을 선택하세요'
       options:
         - feat
+        - fix
         - hotfix
         - refactor
         - test
