Feat : 전체글 조회

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,5 +26,9 @@ feign:
   user-service:
     url : "http://localhost:8081"
 
+springdoc:
+  swagger-ui:
+    operations-sorter: method
+
 jwt:
   secret: ${JWT_SECRET}
