--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,13 @@ spring:
     #mongodb:
      # uri: ${LOCAL_MONGODB_URI}
 
+aws:
+  s3:
+    bucket: ${S3_BUCKET_NAME} # 임시
+    region: ${S3_REGION}
+    access-key: ${S3_ACCESS_KEY}
+    secret-key: ${S3_SECRET_KEY}
+
 feign:
   user-service:
     url : "http://localhost:8081"
