--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
     #mongodb:
      # uri: ${LOCAL_MONGODB_URI}
 
+  elasticsearch:
+    uris: http://localhost:9200
+    connection-timeout: 5s
+    socket-timeout: 3s
+
 aws:
   s3:
     bucket: ${S3_BUCKET_NAME} # 임시
