--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,9 @@ dependencies {
 
 	//elastic search
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-	implementation 'co.elastic.clients:elasticsearch-java:8.11.2'
-
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+//	implementation 'co.elastic.clients:elasticsearch-java:8.11.3'
 
 	//jwt 토큰 관련 라이브러리 추가
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
