--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ aws:
 
 feign:
   user-service:
-    url : "http://localhost:8081" #todo : 실제 url 로 바꾸기
+    url : "http://localhost:8081" #${USER_SERVICE_URL} #todo : 실제 url 로 바꾸기
   matching-service:
     url : "http://localhost:8002" #todo : 실제 url 로 바꾸기
 
