--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,49 +1,17 @@
 spring:
-  datasource:
-    url: ${LOCAL_DB_URL}
-    username: ${LOCAL_DB_USERNAME}
-    password: ${LOCAL_DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver  # (optional, 대부분 auto detect 되지만 명시해도 좋음)
+  application:
+    name: blog-service
+  config:
+    import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://config-service.config.svc.cluster.local:8888
+      name: blog-service
+      label: main
+      fail-fast: true
+  profiles:
+    active: cloud
 
-  jpa:
-    hibernate:
-      ddl-auto: update  # create, update, none 등 상황에 따라
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true  # SQL 로그 보기 좋게 포맷
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      authentication-database: admin
-      database: alog
-    #mongodb:
-     # uri: ${LOCAL_MONGODB_URI}
-    elasticsearch:
-      uris: localhost:9200
-      repositories:
-        enabled: true
-      connection-timeout: 5s
-      socket-timeout: 3s
-
-aws:
-  s3:
-    bucket: ${S3_BUCKET_NAME} # todo : 임시
-    region: ${S3_REGION}
-    access-key: ${S3_ACCESS_KEY}
-    secret-key: ${S3_SECRET_KEY}
-
-feign:
-  user-service:
-    url : "http://localhost:8081" #${USER_SERVICE_URL} #todo : 실제 url 로 바꾸기
-  matching-service:
-    url : "http://localhost:8002" #todo : 실제 url 로 바꾸기
-
-springdoc:
-  swagger-ui:
-    operations-sorter: method
-
-jwt:
-  secret: ${JWT_SECRET}
+logging:
+  level:
+    org.springframework.boot.context.config: debug
