Feat : user profile을 위한 redis cache 구성

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ dependencies {
 	//img tag parsing
 	implementation 'org.jsoup:jsoup:1.17.2'
 
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+
 }
 
 dependencyManagement {
