--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -27,6 +27,16 @@ spring:
         enabled: true
       connection-timeout: 5s
       socket-timeout: 3s
+    redis:
+      host: localhost
+      port: 6379
+
+# Feign 로그 레벨을 높여서 호출/응답을 모두 기록
+logging:
+  level:
+    org.springframework.cloud.openfeign: DEBUG
+    org.springframework.cache: INFO
+    org.springframework.data.redis: INFO
 
 aws:
   s3:
