--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,11 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'com.h2database:h2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'com.github.Gachon-Univ-Creative-Code-Innovation:alog-common:v1.0.2'
+
+	//dto 통일
+//	implementation 'com.github.Gachon-Univ-Creative-Code-Innovation:alog-common:v1.0.2'
+	implementation 'com.github.Gachon-Univ-Creative-Code-Innovation:alog-common:bea722bf13'
+
 
 	//elastic search
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
