--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,6 +27,9 @@ spring:
         enabled: true
       connection-timeout: 5s
       socket-timeout: 3s
+    redis:
+      host: localhost
+      port: 6379
   kafka:
     bootstrap-servers: kafka:9092
     producer:
@@ -54,3 +57,9 @@ springdoc:
 
 jwt:
   secret: ${JWT_SECRET}
+
+logging:
+  level:
+    org.springframework.cloud.openfeign: DEBUG
+    org.springframework.cache: INFO
+    org.springframework.data.redis: INFO
