--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -30,6 +30,8 @@ spring:
     redis:
       host: localhost
       port: 6379
+      database: 1
+
   kafka:
     bootstrap-servers: kafka:9092
     producer:
@@ -60,6 +62,4 @@ jwt:
 
 logging:
   level:
-    org.springframework.cloud.openfeign: DEBUG
-    org.springframework.cache: DEBUG
-    org.springframework.data.redis: DEBUG
+    root: DEBUG
