chore: dev,prod에서 config 서버 안 쓰도록 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
     name: blog-service
-  config:
-    import: "optional:configserver:"
+#  config:
+#    import: "optional:configserver:"
   profiles:
     active: cloud
 
