deployment redis 추가

--- a/blog-service-deployment.yaml
+++ b/blog-service-deployment.yaml
@@ -51,6 +51,10 @@ spec:
                 secretKeyRef:
                   name: blog-app-secret
                   key: S3_ACCESS_KEY
+            - name: REDIS_HOST
+              value: redis-service.blog.svc.cluster.local
+            - name: REDIS_PORT
+              value: "6379"
             - name: S3_BUCKET_NAME
               valueFrom:
                 secretKeyRef:
