--- a/blog-service-deployment.yaml
+++ b/blog-service-deployment.yaml
@@ -52,7 +52,7 @@ spec:
                   name: blog-app-secret
                   key: S3_ACCESS_KEY
             - name: REDIS_HOST
-              value: redis-service.blog.svc.cluster.local
+              value: redis-service
             - name: REDIS_PORT
               value: "6379"
             - name: S3_BUCKET_NAME
