KAFKA 환경변수 추가

--- a/blog-service-deployment.yaml
+++ b/blog-service-deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: blog-service
           image: msj9965/alog-blog:main
+          imagePullPolicy: Always
           ports:
             - containerPort: 8030
           env:
